K8s/yaml/trn/deployment-auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trn-auth-deployment
spec:
  selector:
    matchLabels:
      app: trn-auth
  replicas: 1
  template:
    metadata:
      labels:
        app: trn-auth
        env: development
    spec:
      containers:
      - name: trn-auth
        image: asia.gcr.io/platinum-honor-326814/trn_auth:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 30000
        resources:
          requests:
            memory: "10Mi"
            cpu: "10m"
          limits:
            memory: "10Mi"
            cpu: "10m"
---
apiVersion: v1
kind: Service
metadata:
  name: trn-auth-service
spec:
  type: ClusterIP
  ports:
  - port: 30000
    targetPort: 30000
    protocol: TCP
  selector:
    app: trn-auth
