K8s/yaml/trn/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trn-frontend-deployment
spec:
  selector:
    matchLabels:
      app: trn-frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: trn-frontend
        env: development
    spec:
      containers:
      - name: trn-frontend
        image: asia.gcr.io/platinum-honor-326814/trn_frontend:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "10Mi"
            cpu: "10m"
          limits:
            memory: "10Mi"
            cpu: "10m"
---
apiVersion: v1
kind: Service
metadata:
  name: trn-frontend-service
spec:
  type: ClusterIP
  ports:
  - port: 8801
    targetPort: 80
    protocol: TCP
  selector:
    app: trn-frontend
