K8s/yaml/trn/deployment-master-data.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trn-master-data-deployment
spec:
  selector:
    matchLabels:
      app: trn-master-data
  replicas: 1
  template:
    metadata:
      labels:
        app: trn-master-data
        env: development
    spec:
      containers:
      - name: trn-master-data
        image: asia.gcr.io/platinum-honor-326814/trn_master_data:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 35000
        resources:
          requests:
            memory: "10Mi"
            cpu: "10m"
          limits:
            memory: "10Mi"
            cpu: "10m"
---
apiVersion: v1
kind: Service
metadata:
  name: trn-master-data-service
spec:
  type: ClusterIP
  ports:
  - port: 35000
    targetPort: 35000
    protocol: TCP
  selector:
    app: trn-master-data
