K8s/yaml/trn/deployment-member.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trn-member-deployment
spec:
  selector:
    matchLabels:
      app: trn-member
  replicas: 1
  template:
    metadata:
      labels:
        app: trn-member
        env: development
    spec:
      containers:
      - name: trn-member
        image: asia.gcr.io/platinum-honor-326814/trn_member:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 32000
        resources:
          requests:
            memory: "10Mi"
            cpu: "10m"
          limits:
            memory: "10Mi"
            cpu: "10m"
---
apiVersion: v1
kind: Service
metadata:
  name: trn-member-service
spec:
  type: ClusterIP
  ports:
  - port: 32000
    targetPort: 32000
    protocol: TCP
  selector:
    app: trn-member
