K8s/yaml/trn/deployment-staff.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trn-staff-deployment
spec:
  selector:
    matchLabels:
      app: trn-staff
  replicas: 1
  template:
    metadata:
      labels:
        app: trn-staff
        env: development
    spec:
      containers:
      - name: trn-staff
        image: asia.gcr.io/platinum-honor-326814/trn_staff:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 31000
        resources:
          requests:
            memory: "10Mi"
            cpu: "10m"
          limits:
            memory: "10Mi"
            cpu: "10m"
---
apiVersion: v1
kind: Service
metadata:
  name: trn-staff-service
spec:
  type: ClusterIP
  ports:
  - port: 31000
    targetPort: 31000
    protocol: TCP
  selector:
    app: trn-staff
