K8s/yaml/trn/trn-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trn-frontend-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: "k8s-trn-view.gracia.tech"
    http:
      paths:
      - path: /*
        pathType: Prefix
        backend:
          service:
            name: trn-frontend-service
            port:
              number: 8801
